# algorithm-exercises-cpp

./: .dockerignore  .editorconfig  .gitignore  .lcovrc  .vsconfig  CMakeLists.txt  CMakePresets.json  Dockerfile  Environment-Notes.md  Makefile  README.md  compose.yaml  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: clang-format.yml  codeql.yml  cpp-coverage.yml  cpp-linux.yml  cpp-macos.yml  cpp-windows.yml  cpp.yml  (+7 more)
docs/: Environment-Notes.md
src/lib/exercises/: CMakeLists.txt
src/lib/exercises/include/exercises/: foo.hpp
src/lib/exercises/include/exercises/basic/: limits.hpp
src/lib/exercises/include/exercises/hackerrank/projecteuler/: euler001.hpp  euler002.hpp  euler003.hpp
src/lib/exercises/include/exercises/hackerrank/warmup/: a_very_big_sum.hpp  birthday_cake_candles.hpp  compare_triplets.hpp  diagonal_difference.hpp  mini_max_sum.hpp  plus_minus.hpp  simple_array_sum.hpp  solve_me_first.hpp  staircase.hpp  time_conversion.hpp
src/lib/exercises/src/: foo.cpp
src/lib/exercises/src/basic/: limits.cpp
src/lib/exercises/src/hackerrank/projecteuler/: euler001.cpp  euler002.cpp  euler003.cpp
src/lib/exercises/src/hackerrank/warmup/: a_very_big_sum.cpp  birthday_cake_candles.cpp  compare_triplets.cpp  diagonal_difference.cpp  mini_max_sum.cpp  plus_minus.cpp  simple_array_sum.cpp  solve_me_first.cpp  staircase.cpp  time_conversion.cpp
src/tests/: CMakeLists.txt
src/tests/unit/documentation/: readme_validation.test.cpp
src/tests/unit/lib/: foo.test.cpp
src/tests/unit/lib/basic/: limits.test.cpp
src/tests/unit/lib/hackerrank/projecteuler/: euler001.test.cpp  euler001.testcases.json  euler002.test.cpp  euler003.test.cpp
src/tests/unit/lib/hackerrank/warmup/: a_very_big_sum.test.cpp  a_very_big_sum.testcases.json  birthday_cake_candles.test.cpp  birthday_cake_candles.testcases.json  compare_triplets.test.cpp  compare_triplets.testcases.json  diagonal_difference.test.cpp  diagonal_difference.testcases.json  mini_max_sum.test.cpp  mini_max_sum.testcases.json  plus_minus.test.cpp  plus_minus.testcases.json  simple_array_sum.test.cpp  simple_array_sum.testcases.json  solve_me_first.test.cpp  solve_me_first.testcases.json  staircase.test.cpp  staircase.testcases.json  test_conversion.test.cpp  time_conversion.testcases.json
